Fix: Attempting to fix slighty bg shift on mobile view only, live server can't replicate

--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,8 @@ body {
   height: 100vh;
   text-align: center;
   position: relative;
+  padding-top: 2px;
+  padding-bottom: 2px;
 }
 
 .glass-container {
